packages/svelte/tests/compiler-errors/samples/unexpected-end-of-input/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'unclosed-element',
		message: '<div> was left open',
		position: [0, 1]
	}
});
